[package]
name = "web-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.6.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2.2"
serde_json = "1.0.87"
scraper = "0.13.0"
kuchiki = "0.8.1"
html5ever = "0.26.0"